<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="es.guiguegon.permissions.example.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textSize="16sp" />

    <Button
        android:id="@+id/write_external_storage_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/permission_status"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:text="@string/write_external_storage_button"
        android:textSize="12sp" />

    <Button
        android:id="@+id/read_contacts_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/write_external_storage_button"
        android:padding="8dp"
        android:text="@string/read_contacts_button"
        android:textSize="12sp" />

    <Button
        android:id="@+id/location_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/read_contacts_button"
        android:padding="8dp"
        android:text="@string/location_group_button"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/permission_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/title"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/permission_status" />

    <TextView
        android:id="@+id/write_external_storage_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/write_external_storage_button"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/permission_status"
        android:layout_toEndOf="@+id/write_external_storage_button"
        android:layout_toRightOf="@+id/write_external_storage_button"
        android:gravity="center_vertical|end"
        android:padding="8dp"
        android:text="@string/permission_status_unknown" />

    <TextView
        android:id="@+id/read_contacts_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/read_contacts_button"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/write_external_storage_status"
        android:layout_toEndOf="@+id/read_contacts_button"
        android:layout_toRightOf="@+id/read_contacts_button"
        android:gravity="center_vertical|end"
        android:padding="8dp"
        android:text="@string/permission_status_unknown" />

    <TextView
        android:id="@+id/location_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/location_button"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/read_contacts_status"
        android:layout_toEndOf="@+id/location_button"
        android:layout_toRightOf="@+id/location_button"
        android:gravity="center_vertical|end"
        android:padding="8dp"
        android:text="@string/permission_status_unknown" />

</RelativeLayout>

